--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.29",
+    "react-native-select-multiple": "^2.1.0",
     "react-native-webview": "^8.0.5",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.16",
